# api_project

./: .env  docker-compose.yaml  hui.py  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 6c7ba6aa1220_init.py  a20ca674ba7d_init.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contact.py  user.py
src/routes/: auth.py  contact.py  current_birthday.py  users.py
src/services/: auth.py  email.py
templates/: example_email.html
tests/: test_route_auth.py  test_route_contact.py  test_unit_repository_contact.py  test_unit_repository_user.py
