[tool.poetry]
name = "api-project"
version = "0.1.0"
description = ""
authors = ["ivan1melnyk <melnyk.ivan20a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
fastapi-mail = "^1.4.1"
redis = "^5.0.3"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.39.1"
conf = "^0.4.1"
config = "^0.5.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
